--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,12 @@ openpyxl = "^3.1.2"
 ipykernel = "^6.29.4"
 xlwings = "^0.31.1"
 tqdm = "^4.66.4"
+numpy = "^1.26.4"
 
 
 [tool.poetry.group.dev.dependencies]
 sphinx = "^7.3.7"
+black = "^24.4.2"
 
 [build-system]
 requires = ["poetry-core"]
