--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,26 @@
-[tool.poetry]
+[project]
 name = "grader-helper"
-version = "0.1.9"
+version = "0.1.10"
 description = "Functions to help manage assignments from UL which are hosted on Brightspace"
-authors = ["Kevin O Malley"]
+authors = [{name = "Kevin O Malley", email = "kevomalley743@gmail.com"}]
 license = "MIT"
 readme = "README.md"
 packages = [{include = "grader_helper"}]
-
-[tool.poetry.dependencies]
-python = "^3.11"
-pandas = "^2.2.2"
-pathlib = "^1.0.1"
-openpyxl = "^3.1.2"
-ipykernel = "^6.29.4"
-xlwings = "^0.31.1"
-tqdm = "^4.66.4"
-numpy = "^1.26.4"
+dependencies = [
+    "openpyxl>=3.1.5",
+    "pandas>=2.2.3",
+    "xlwings>=0.33.5",
+]
 
 
-[tool.poetry.group.dev.dependencies]
-sphinx = "^7.3.7"
-black = "^24.4.2"
+
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "black>=24.10.0",
+    "sphinx>=8.1.3",
+]
