--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,18 @@
 [project]
 name = "grader-helper"
-version = "0.1.10"
+version = "0.1.11"
 description = "Functions to help manage assignments from UL which are hosted on Brightspace"
 authors = [{name = "Kevin O Malley", email = "kevomalley743@gmail.com"}]
 license = "MIT"
 readme = "README.md"
 packages = [{include = "grader_helper"}]
 dependencies = [
+    "numpy>=2.2.1",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
+    "tqdm>=4.67.1",
     "xlwings>=0.33.5",
 ]
-
-
 
 
 [build-system]
@@ -24,3 +24,7 @@ dev = [
     "black>=24.10.0",
     "sphinx>=8.1.3",
 ]
+
+
+[tool.hatch.build.targets.wheel]
+packages = ["grader_helper"]
