--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,4 @@
+
 [project]
 name = "grader-helper"
 version = "0.1.11"
@@ -15,17 +16,16 @@ dependencies = [
     "xlwings>=0.33.5",
 ]
 
-
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[dependency-groups]
+[tool.hatch.envs.default.dependencies]
 dev = [
     "black>=24.10.0",
     "sphinx>=8.1.3",
 ]
 
-
 [tool.hatch.build.targets.wheel]
 packages = ["grader_helper"]
+
