--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
     "pydantic>=2.11.7",
+    "pytest>=8.4.1",
     "python-calamine>=0.4.0",
     "randomtimestamp>=2.3",
     "tqdm>=4.67.1",
