--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,3 @@
-
 [project]
 name = "grader-helper"
 version = "0.1.11"
@@ -7,7 +6,7 @@ description-content-type = "text/markdown"
 authors = [{name = "Kevin O Malley", email = "kevomalley743@gmail.com"}]
 license = "MIT"
 readme = "README.md"
-packages = [{include = "grader_helper"}]
+packages = [{include = "grader_helper", from = "src"}]
 dependencies = [
     "faker>=37.4.2",
     "matplotlib>=3.10.3",
@@ -37,7 +36,7 @@ dependencies = [
 
 
 [tool.hatch.build.targets.wheel]
-packages = ["grader_helper"]
+packages = ["src/grader_helper"]
 
 [dependency-groups]
 dev = [
