got basic yaml io working for courses
have this now working for minimal version so courses

--- a/tests/output/test_course_config.yaml
+++ b/tests/output/test_course_config.yaml
@@ -1,7 +1,7 @@
-name: test_module
+name: test_course
 code: '0001'
 root: C:\Users\Kevin.OMalley\OneDrive - University of 
-  Limerick\Teaching\grader_helper\tests\resources
+  Limerick\Teaching\grader_helper\tests\output
 model_leader: John Smith
 year: 2025(26)
 internal_moderator: Joan Smith
