--- a/tests/resources/test_course_config.yaml
+++ b/tests/resources/test_course_config.yaml
@@ -1,4 +1,4 @@
-name: test_module
+name: test_course
 code: '0001'
 root: C:\Users\Kevin.OMalley\OneDrive - University of 
   Limerick\Teaching\grader_helper\tests\output
