chaged the implimentation of alphabetise folders.
haven't tested it yet, but now I'm using dict.get() logic and orienting
around the student number becuase it's now in the file. This is a better
implimentation over all i think.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,11 @@ dev = [
 [tool.hatch.build.targets.wheel]
 packages = ["grader_helper"]
 
+[tool.uv.sources]
+grader-helper = { workspace = true }
+
+[dependency-groups]
+dev = [
+    "grader-helper",
+]
+
